Revision history for MooseX-App-Cmd

{{$NEXT}}

0.29      2015-01-06 02:47:11Z
    - re-release 0.28 as stable

0.28      2014-05-06 16:20:58Z (TRIAL RELEASE)
    - Be more intelligent about determining Moose or Mouse requirements at
      build time.

0.27      2013-12-31 14:26:29 UTC
    - update developer and Dist::Zilla author dependencies

0.26      2013-12-16 22:19:52Z (TRIAL RELEASE)
    - better reporting of skipped Moose/Mouse tests
    - add release test to check changelog for new content

0.25      2013-12-09 15:37:31Z (TRIAL RELEASE)
    - test for Mo(o|u)seX::Getopt before running Mo(o|u)se-specific tests

0.24      2013-12-09 02:01:55Z (TRIAL RELEASE)
    - add requirements, recommendations and provides to meta files

0.23      2013-12-08 20:52:56Z (TRIAL RELEASE)
    - fixes to Moose/Mouse tests

0.22      2013-12-02 15:56:59Z (TRIAL RELEASE)
    - forgot to update changelog last time, no code changes

0.21      2013-12-02 15:47:32Z (TRIAL RELEASE)
    - do a better job of not requiring Moose for build/install

0.20      2013-12-01 23:18:42Z (TRIAL RELEASE)
    - use Any::Moose for Moose and Mouse compatibility in the same package

0.11      2013-11-22 16:48:20Z
    - gh#6: document --configfile option added in 0.03 (reported by abraxxa)
    - gh#8: fix missing commands in test files (ubermichael)

0.10      2013-05-17 14:29:01Z
    - RT#84437: fix missing parameter in call to default function
      (chips, ouftete)
    - gh#3: fix failing test introduced by MooseX::ConfigFromFile 0.08
      (ouftete)
    - point perlcritic author test to the correct perltidy config
    - add author dependencies to Dist::Zilla dist.ini file (omega)

0.09      2012-03-19 00:21:21Z
    - RT#74668: can use a sub {} for configfile default (yanick)
    - RT#75446: add all necessary metadata as part of conversion
      to Dist::Zilla (mjgardner)
    - RT#75447: require correct version of Getopt::Long::Descriptive so
      basic and configfile tests can pass (mjgardner)