@@ -1,4 +1,4 @@
-name = MooseX-App-Cmd
+name = MouseX-App-Cmd
 author = יובל קוג'מן (Yuval Kogman) <nothingmuch@woobling.org>
 license = Perl_5
 copyright_holder = Infinity Interactive, Inc.
@@ -8,7 +8,7 @@ copyright_year = 2008
 :version = 0.068
 installer = MakeMaker
 Authority.authority = cpan:NUFFIN
-AutoPrereqs.skip[0] = ^MooseX::ConfigFromFile
+AutoPrereqs.skip[0] = ^MouseX::ConfigFromFile
 -remove = PkgVersion
 -remove = Test::PodSpelling ; TODO
 
@@ -24,7 +24,7 @@ Perl::Critic::Pulp = 0
 Perl::Critic::StricterSubs = 0
 
 [Prereqs / RuntimeSuggests]
-MooseX::ConfigFromFile = 0
+MouseX::ConfigFromFile = 0
 
 [OurPkgVersion]
 
