@@ -16,13 +16,13 @@ lib_sections    = DESCRIPTION | SYNOPSIS
 script_sections = USAGE | OPTIONS | EXIT STATUS
 
 [Subroutines::ProhibitCallsToUndeclaredSubs]
-exempt_subs = Moose::blessed Moose::extends Moose::has Moose::override Moose::with
+exempt_subs = Mouse::blessed Mouse::extends Mouse::has Mouse::override Mouse::with
 
 [Subroutines::ProhibitUnusedPrivateSubroutines]
 private_name_regex = _(?!build_)\w+
 
 [TestingAndDebugging::RequireUseStrict]
-equivalent_modules = Moose
+equivalent_modules = Mouse
 
 [TestingAndDebugging::RequireUseWarnings]
-equivalent_modules = Moose
+equivalent_modules = Mouse
