@@ -1,6 +1,9 @@
-Revision history for MooseX-App-Cmd
+Revision history for MouseX-App-Cmd
 
 {{$NEXT}}
+    - Split out MouseX-App-Cmd from MooseX-App-Cmd
+
+Remaining changes are from MooseX-App-Cmd change log
 
 0.29      2015-01-06 02:47:11Z
     - re-release 0.28 as stable
